# pulse

./: .env.example  .gitignore  404.html  Makefile  README.md  ai4s_consulting_response.html  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  诺和项目时间线.md
.github/workflows/: docs.yml  weekly.yml
assets/: resume.css
docs/: index.md
docs/projects/: 3_safety.md  druggability.md  index.md
docs/projects/3_safety/llm-models/: alternative-candidates.md  index.md  (+2 more)
docs/reports/monthly/: index.md
docs/reports/quarterly/: index.md
docs/reports/weekly/: 2026-W19.md  2026-W26.md  2026-W27.md  2026-W28.md  index.md
examples/: modality_lite_targets.csv
modality_lite/: __init__.py  cli.py  models.py  report.py  scoring.py
modality_lite/sources/: __init__.py  opentargets.py
projects/: index.html
projects/3_safety/: index.html  meta.yaml  milestones.yaml  progress.md
projects/3_safety/llm-models/: index.html
projects/druggability/: index.html  meta.yaml  milestones.yaml  progress.md
reports/monthly/: index.html
reports/quarterly/: index.html
reports/ric-monthly/: README.md
reports/ric-monthly/2026-06/: monthly_report_2026_06.md  monthly_report_2026_06.pptx
reports/weekly/: 2026-W19.md  2026-W26.md  2026-W29.md  index.html
reports/weekly/2026-W19/: index.html
reports/weekly/2026-W26/: index.html
scripts/: build_deck.py  collect.py  md_to_pdf.py  render.py  summarize_llm.py
scripts/ric-monthly/: build_ric_monthly_2026_06.py
search/: search_index.json
templates/: monthly.md.j2  weekly.md.j2
tests/: test_modality_lite_scoring.py
(+3 files in other folders)
